fix: add pre tag overflow and change repo info

--- a/src/app/pages/post/post.component.scss
+++ b/src/app/pages/post/post.component.scss
@@ -4,3 +4,6 @@
   display: block;
   margin: 0 auto;
 }
+:host markdown ::ng-deep pre {
+  overflow: auto;
+}
